# abc_parse

./: .eslintrc.json  .gitignore  .nvim.lua  .prettierignore  .prettierrc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  MUSESAMPLER_SETUP.md  README.md  RELEASING.md  abc_parser_timetracking.org  abcjs-ast.d.ts  abcx-plan.md  abcx.md  directives_reference.md  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
abc-cli/: abcls-cli.ts  esbuild.js  package.json  publish-package.json  publish.sh  svg-renderer.ts  tsconfig.json
abc-kak/: .gitignore  README.md  esbuild-publish.js  esbuild.js  kak-lsp.toml.example  manual_testing.md  package.json  publish-package.json  publish.sh  tsconfig.json
abc-lsp-server/: package-lock.json  package.json  tsconfig.json
abct/: package.json  tsconfig.json
abct2/: package.json  tsconfig.json
cstree/: package.json  tsconfig.json
docs/: testing-pr-vscode-transforms.md
docs-site/: astro.config.mjs  package-lock.json  package.json
editor/: package.json  tsconfig.json
midi/: package.json  tsconfig.json
native/: CMakeLists.txt  package.json  tsconfig.json
native/lib/: client.ts  index.ts  types.ts
native/src/: audio_output.cpp  audio_output.h  json_protocol.cpp  json_protocol.h  main.cpp  musesampler_wrapper.cpp  musesampler_wrapper.h
parse/: helpers.ts  index.ts  note.md  package.json  tsconfig.json
plans/: 1.fuzz-testing-setup.md  1.scope-ranges-plan.md  1.treesitter-scanner-tests.md  10.abct-grammar-fixes.md  10.abct-transform-library.md  10.bug-tracker-highlighting.md  11.abct-evaluation-commands.md  11.abct-semantic-tokens.md  12.abct-diagnostics.md  13.abct-hover-documentation.md  13.unify-abct-context.md  14.abct-autocompletion.md  15.abct-formatter.md  16.abct-preview-virtual-doc.md  17.abct-integration-tests.md  18.abct-v2-language-design.md  18.treesitter-grammar.md  19.abct-v2-scheme-prototype.md  19.treesitter-scanner-tests.md  2.parsing-errors-fix.md  20.composable-selectors.md  21.selector-commands.md  (+80 more)
src/: Abc.ts  (+15 more)
(+867 files in other folders)
